# kli

./: .gitignore  Cargo.toml  README.md  bun.lockb  eslint.config.js  feef.txt  gitlog.txt  justfile  kli.ts  localrelease.sh  main.ts  package.json  test_kli.sh  vhost.tmpl.txt
ref/: config.toml  deploy.sh  initsubdomain.sh
src/: config.rs  kli.ts  lib.rs  main.rs
tests/: cli.rs  foo.txt
