[package]
name = "kli"
version = "0.1.0"
authors = ["kennybaron@fastmail.com"]
license = "MIT"
description = "Kenny's CLI Omnitool"
readme = "README.md"
homepage = "https://github.com/protofarer/kli"
keywords = ["cli", "productivity"]
categories = ["command-line-utilities"]
edition = "2021"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
indicatif = "0.17"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
tempfile = "3.2"
ctor = "0.2"
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
